// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loader should throw an error on broken "node" addon: errors 1`] = `Array []`;

exports[`loader should throw an error on broken "node" addon: module 1`] = `
"
try {
  process.dlopen(module, __dirname + \\"/\\" + __webpack_public_path__ + \\"broken.node\\");
} catch (error) {
  throw new Error('node-loader:\\\\n' + error);
}
"
`;

exports[`loader should throw an error on broken "node" addon: warnings 1`] = `Array []`;

exports[`loader should work: errors 1`] = `Array []`;

exports[`loader should work: module 1`] = `
"
try {
  process.dlopen(module, __dirname + \\"/\\" + __webpack_public_path__ + \\"hello.node\\", 1);
} catch (error) {
  throw new Error('node-loader:\\\\n' + error);
}
"
`;

exports[`loader should work: result 1`] = `
Object {
  "default": "world",
}
`;

exports[`loader should work: warnings 1`] = `Array []`;
